--- a/index.html
+++ b/index.html
@@ -29,31 +29,31 @@
     <main class="container">
       <div class="card-wrapper grid grid-col">
         <div class="flex flex-col card-col card-col--1">
-          <img src="./images/icon-sedans.svg" alt="sedan car image" />
-          <h1 class="card-col--heading">Sedans</h1>
+          <img src="./images/icon-sedans.svg" alt="" aria-hidden="true" />
+          <h2 class="card-col--heading">Sedans</h2>
           <p class="card-col--para">
             Choose a sedan for its affordability and excellent fuel economy.
             Ideal for cruising in the city or on your next road trip.
           </p>
-          <button class="btn btn--1">Learn More</button>
+          <a href="#" class="btn btn--1">Learn More</a>
         </div>
         <div class="flex flex-col card-col card-col--2">
-          <img src="./images/icon-suvs.svg" alt="suv car image" />
-          <h1 class="card-col--heading">SUVs</h1>
+          <img src="./images/icon-suvs.svg" alt="" aria-hidden="true" />
+          <h2 class="card-col--heading">SUVs</h2>
           <p class="card-col--para">
             Take an SUV for its spacious interior, power, and versatility.
             Perfect for your next family vacation and off-road adventures.
           </p>
-          <button class="btn btn--2">Learn More</button>
+          <a href="#" class="btn btn--2">Learn More</a>
         </div>
         <div class="flex flex-col card-col card-col--3">
-          <img src="./images/icon-luxury.svg" alt="luxury car image" />
-          <h1 class="card-col--heading">Luxury</h1>
+          <img src="./images/icon-luxury.svg" alt="" aria-hidden="true" />
+          <h2 class="card-col--heading">Luxury</h2>
           <p class="card-col--para">
             Cruise in the best car brands without the bloated prices. Enjoy the
             enhanced comfort of a luxury rental and arrive in style.
           </p>
-          <button class="btn btn--3">Learn More</button>
+          <a href="#" class="btn btn--3">Learn More</a>
         </div>
       </div>
     </main>
